--- a/owner/owner-client/src/app/_layouts/employees/employees-create/employees-create.component.css
+++ b/owner/owner-client/src/app/_layouts/employees/employees-create/employees-create.component.css
@@ -11,6 +11,9 @@
 .other-info {
     flex: 50%;
     padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .input-wrapper {
@@ -25,14 +28,16 @@
 
 .checkbox-wrapper {
     display: flex;
-    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    margin: 1rem 0;
 }
 
 .save-btn-wrapper {
     display: flex;
     width: 100%;
     align-items: center;
-    justify-content: flex-end;
+    justify-content: space-around
 }
 
 @media (max-width: 960px) {
@@ -45,6 +50,20 @@
     .two-col {
         flex-direction: column;
         gap: 0;
+    }
+
+    .save-btn-wrapper {
+        margin-top: 1rem;
+        flex-direction: column;
+        gap: 1rem;
+    }
+
+    .save-btn-wrapper button {
+        width: 100%;
+    }
+
+    .image-wrapper {
+        margin-top: 1rem;
     }
 }
 
