Created employee card

--- a/owner/owner-client/src/app/_layouts/employees/employees.component.html
+++ b/owner/owner-client/src/app/_layouts/employees/employees.component.html
@@ -1,1 +1,5 @@
-<app-employee-card></app-employee-card>
+<div class="card-wrapper">
+    <ng-container *ngFor="let employee of employeesCards">
+        <app-employee-card [employee]="employee"></app-employee-card>
+    </ng-container>
+</div>
