--- a/owner/owner-client/src/app/_components/employee-card/employee-card.component.html
+++ b/owner/owner-client/src/app/_components/employee-card/employee-card.component.html
@@ -1,4 +1,4 @@
-<figure class="snip1336 hover">
+<figure class="snip1336 hover" *ngIf="employee">
   <!-- <img
     src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample74.jpg"
     alt="sample74"
@@ -6,11 +6,12 @@
   <div class="background-spinner-wrapper" *ngIf="isLoadingBackgroundImage">
     <mat-spinner color="accent"></mat-spinner>
   </div>
-  <img 
-  src="assets/img/default.png"
-   alt="restaurant profile" 
-   (load)="isLoadingBackgroundImage = false"
-   >
+  <img
+    src="{{ employee.restaurant.profileImage || 'assets/img/default.png' }}"
+    alt="restaurant profile"
+    (load)="isLoadingBackgroundImage = false"
+    (error)="employee.restaurant.profileImage = 'assets/img/default.png'"
+  />
   <figcaption>
     <!-- <img
       src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/profile-sample2.jpg"
@@ -18,22 +19,36 @@
       class="profile"
     /> -->
     <img
-      src="assets/img/default-profile.png"
+      src="{{ employee.profileImage || 'assets/img/default-profile.png' }}"
       alt="user profile"
       class="profile"
       (load)="isLoadingProfileImage = false"
+      (error)="employee.profileImage = 'assets/img/default-profile.png'"
     />
     <div class="profile" *ngIf="isLoadingProfileImage">
-        <mat-spinner color="primary"></mat-spinner>
+      <mat-spinner color="primary"></mat-spinner>
     </div>
-    <h2>Wisteria Widget<span>Photographer</span></h2>
+    <h2>
+      {{ employee.firstName }} {{ employee.lastName
+      }}<span>{{ employee.username }}</span>
+    </h2>
     <p>
-      Calvin: I'm a genius, but I'm a misunderstood genius. Hobbes: What's
-      misunderstood about you? Calvin: Nobody thinks I'm a genius.
+      {{ employee.description }}
     </p>
     <div class="btn-wrapper">
-        <a href="#" mat-raised-button class="follow" color="accent">More Info</a>
-        <a href="#" mat-raised-button color="primary" class="info">ime restorana</a>
+      <a
+        routerLink="/employees/{{ employee.id }}"
+        mat-raised-button
+        class="follow"
+        color="accent"
+        >More Info</a
+      >
+      <a
+        routerLink="/restaurants/{{ employee.restaurant.id }}"
+        color="primary"
+        class="info"
+        >{{ employee.restaurant.name }}</a
+      >
     </div>
   </figcaption>
 </figure>
