--- a/owner/owner-client/src/app/_components/employee-card/employee-card.component.css
+++ b/owner/owner-client/src/app/_components/employee-card/employee-card.component.css
@@ -1,124 +1,57 @@
-@import url(https://fonts.googleapis.com/css?family=Roboto:300,400,600);
-.snip1336 {
-  font-family: 'Roboto', Arial, sans-serif;
-  position: relative;
-  overflow: hidden;
-  margin: 10px;
-  width: 315px;
-  color: #ffffff;
-  text-align: left;
-  line-height: 1.4em;
-  background-color: #141414;
-  border: 1px solid var(--primary);
-  border-radius: 5px;
-  height: 100%;
+.main-wrapper {
+  width: 20rem;
+  padding-bottom: 2rem;
+}
+
+.restaurant-image-wrapper {
+  background-color: black;
+  height: 12rem;
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  align-items: center;
+  overflow: hidden;
 }
-.snip1336 * {
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  -webkit-transition: all 0.25s ease;
-  transition: all 0.25s ease;
-}
-.snip1336 img {
-  width: 100%;
-  vertical-align: top;
-  opacity: 0.85;
-  height: 14rem;
-}
-.snip1336 figcaption {
-  width: 100%;
-  background-color: #141414;
-  padding: 25px;
-  position: relative;
-  height: 20rem;
-}
-.snip1336 figcaption:before {
-  position: absolute;
-  content: '';
-  bottom: 100%;
-  left: 0;
-  width: 0;
-  height: 0;
-  border-style: solid;
-  border-width: 55px 0 0 400px;
-  border-color: transparent transparent transparent #141414;
-}
-.snip1336 figcaption a {
-  padding: 5px;
-  border: 1px solid #ffffff;
-  color: #ffffff;
-  font-size: 0.7em;
-  text-transform: uppercase;
-  margin: 10px 0;
-  display: inline-block;
-  opacity: 0.65;
-  width: 47%;
-  text-align: center;
-  text-decoration: none;
-  font-weight: 600;
-  letter-spacing: 1px;
-}
-.snip1336 figcaption a:hover {
-  opacity: 1;
-}
-.snip1336 .profile {
+
+.profile-image-wrapper {
+  width: 7rem;
+  height: 7rem;
+  border: 1px solid var(--primary);
   border-radius: 50%;
   position: absolute;
-  bottom: 100%;
-  left: 25px;
-  z-index: 1;
-  width: 90px;
-  height: 90px;
-  border: 1px solid var(--primary);
-  opacity: 1;
-  box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
+  background-color: black;
+  left: 0;
+  top: -65px;
+  overflow: hidden;
 }
-.snip1336 .follow {
-  margin-right: 4%;
-  border-color: #2980b9;
-  color: #2980b9;
+
+.profile-img {
+  height: 100%;
 }
-.snip1336 h2 {
-  margin: 0 0 5px;
-  font-weight: 300;
+
+.header-wrapper {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  position: relative;
 }
-.snip1336 h2 span {
-  display: block;
+
+.header-wrapper > h2 {
+  margin: 0;
+}
+
+.username {
   font-size: 14px;
-  color: #2980b9;
+  color: var(--primary);
 }
-.snip1336 p {
-  margin: 0 0 10px;
-  font-size: 0.8em;
-  letter-spacing: 1px;
-  opacity: 0.8;
+
+.description-wrapper {
+  margin: 1rem 0;
 }
 
 .btn-wrapper {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 25px;
-}
-
-.info {
-  border-radius: 5px;
-  background-color: var(--primary);
-}
-
-.background-spinner-wrapper {
-  position: absolute;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  right: 0;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+  gap: 1rem;
+  padding: 0 1rem;
 }
