finish design employee card

--- a/owner/owner-client/src/app/_components/employee-card/employee-card.component.css
+++ b/owner/owner-client/src/app/_components/employee-card/employee-card.component.css
@@ -1,6 +1,7 @@
 .main-wrapper {
   width: 20rem;
   padding-bottom: 2rem;
+  border: 1px solid var(--primary);
 }
 
 .restaurant-image-wrapper {
@@ -9,6 +10,24 @@
   display: flex;
   align-items: center;
   overflow: hidden;
+  position: relative;
+}
+
+.restaurant-spinner-wrapper {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.profile-spinner-wrapper {
+  position: absolute;
+  bottom: 5px;
+  right: 5px;
 }
 
 .profile-image-wrapper {
