--- a/owner/owner-client/src/app/_components/employee-card/employee-card.component.html
+++ b/owner/owner-client/src/app/_components/employee-card/employee-card.component.html
@@ -1,15 +1,20 @@
 <mat-card class="main-wrapper" *ngIf="employee">
   <div class="restaurant-image-wrapper">
-    <img src="{{ employee.restaurant.profileImage || 'assets/img/default.png'}}" alt="restaurant image" class="img" />
+    <div class="restaurant-spinner-wrapper" *ngIf="isLoadingBackgroundImage">
+      <mat-spinner color="accent"></mat-spinner>
+    </div>
+    <img src="{{ employee.restaurant.profileImage || 'assets/img/default.png'}}" alt="restaurant image" class="img"
+      (load)="isLoadingBackgroundImage = false" (error)="employee.restaurant.profileImage = 'assets/img/default.png'" />
   </div>
   <mat-card-header>
     <div class="header-wrapper">
       <div class="profile-image-wrapper">
-        <img
-          src="{{ employee.profileImage || 'assets/img/default-profile.png' }}"
-          alt="profile image"
-          class="img profile-img"
-        />
+        <div class="profile-spinner-wrapper" *ngIf="isLoadingProfileImage">
+          <mat-spinner color="primary"></mat-spinner>
+        </div>
+        <img src="{{ employee.profileImage || 'assets/img/default-profile.png' }}" alt="profile image"
+          class="img profile-img" (load)="isLoadingProfileImage = false"
+          (error)="employee.profileImage = 'assets/img/default-profile.png'" />
       </div>
       <h2>{{ employee.lastName }} {{ employee.firstName }}</h2>
       <div class="username">{{ employee.username }}</div>
@@ -18,19 +23,16 @@
   <mat-card-content>
     <div class="description-wrapper">
       <p>
-        {{
-          ("Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, neque consequuntur? Ab facere distinctio libero suscipit optio dolore fugit consequuntur sed, ipsam, iure officia exercitationem"
-            | slice : 0 : 200) + "..."
-        }}
+        {{ employee.description.length > 200 ? (employee.description | slice:0:200) + '...' : employee.description }}
       </p>
     </div>
   </mat-card-content>
 
   <mat-card-actions>
     <div class="btn-wrapper">
-      <button mat-raised-button type="button" color="accent">More Info</button>
-      <button mat-raised-button type="button" color="primary">
-        ime nekog restorana
+      <button mat-raised-button routerLink="/employees/{{employee.id}}" type="button" color="accent">More Info</button>
+      <button mat-raised-button routerLink="/restaurants/{{employee.restaurant.id}}" type="button" color="primary">
+        {{ employee.restaurant.name }}
       </button>
     </div>
   </mat-card-actions>
