Working on header in employee details

--- a/owner/owner-client/src/app/_layouts/employees/employees-details/employees-details.component.html
+++ b/owner/owner-client/src/app/_layouts/employees/employees-details/employees-details.component.html
@@ -1,1 +1,20 @@
-<p>employees-details works!</p>
+<div class="header-wrapper">
+    <div class="background-image-wrapper">
+        <img src="assets/img/restaurants/rupa.jpg" alt="background image" class="background-image">
+    </div>
+
+    <div class="header-content-wrapper">
+        <div class="profile-image-wrapper">
+            <img src="assets/img/profile.jpg" class="img" alt="profile image">
+        </div>
+        <div class="header-content-info-wrapper">
+            <div class="fullname">Adir Zunic</div>
+            <div class="username">zuna21</div>
+        </div>
+
+        <div class="btn-wrapper">
+            <button mat-raised-button type="button" color="accent">Edit</button>
+            <button mat-raised-button tupe="button" color="warn">Delete</button>
+        </div>
+    </div>
+</div>
