still working on employee ditails header

--- a/owner/owner-client/src/app/_layouts/employees/employees-details/employees-details.component.html
+++ b/owner/owner-client/src/app/_layouts/employees/employees-details/employees-details.component.html
@@ -1,20 +1,17 @@
 <div class="header-wrapper">
-    <div class="background-image-wrapper">
-        <img src="assets/img/restaurants/rupa.jpg" alt="background image" class="background-image">
-    </div>
-
     <div class="header-content-wrapper">
-        <div class="profile-image-wrapper">
-            <img src="assets/img/profile.jpg" class="img" alt="profile image">
+        <div class="profile-picture-wrapper">
+            <img src="assets/img/profile.jpg" class="profile-image" alt="">
         </div>
-        <div class="header-content-info-wrapper">
-            <div class="fullname">Adir Zunic</div>
-            <div class="username">zuna21</div>
-        </div>
-
-        <div class="btn-wrapper">
-            <button mat-raised-button type="button" color="accent">Edit</button>
-            <button mat-raised-button tupe="button" color="warn">Delete</button>
+        <div class="header-name-and-buttons-wrapper">
+            <div class="header-name-wrapper">
+                <h1 class="full-name">Adir Zunic</h1>
+                <div class="username">zuna21</div>
+            </div>
+            <div class="header-btn-wrapper">
+                <button mat-raised-button color="accent" type="button">Edit</button>
+                <button mat-raised-button color="warn" type="button">Delete</button>
+            </div>
         </div>
     </div>
 </div>
