Created employee details header component for desktop

--- a/owner/owner-client/src/app/_layouts/employees/employees-details/employees-details.component.html
+++ b/owner/owner-client/src/app/_layouts/employees/employees-details/employees-details.component.html
@@ -1,17 +1,1 @@
-<div class="header-wrapper">
-    <div class="header-content-wrapper">
-        <div class="profile-picture-wrapper">
-            <img src="assets/img/profile.jpg" class="profile-image" alt="">
-        </div>
-        <div class="header-name-and-buttons-wrapper">
-            <div class="header-name-wrapper">
-                <h1 class="full-name">Adir Zunic</h1>
-                <div class="username">zuna21</div>
-            </div>
-            <div class="header-btn-wrapper">
-                <button mat-raised-button color="accent" type="button">Edit</button>
-                <button mat-raised-button color="warn" type="button">Delete</button>
-            </div>
-        </div>
-    </div>
-</div>
+<app-employees-details-header></app-employees-details-header>
