--- a/owner/owner-client/src/app/_layouts/employees/employees-details/employees-details-header/employees-details-header.component.css
+++ b/owner/owner-client/src/app/_layouts/employees/employees-details/employees-details-header/employees-details-header.component.css
@@ -62,5 +62,34 @@
 }
 
 .username {
-    color: var(--primary);
+  color: var(--primary);
+}
+
+@media (max-width: 960px) {
+  .header-content-wrapper {
+    justify-content: space-around;
+    align-items: center;
+  }
+
+  .profile-picture-wrapper {
+    position: relative;
+    left: 0;
+    bottom: 0;
+  }
+
+  .header-name-and-buttons-wrapper {
+    padding: 0;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 2rem;
+    width: 100%;
+    padding: 0 2rem;
+  }
+
+  .header-btn-wrapper {
+    display: flex;
+    gap: 1rem;
+    flex-direction: column;
+    width: 100%;
+  }
 }
