--- a/owner/owner-client/src/app/_layouts/employees/employees-details/employees-details.component.html
+++ b/owner/owner-client/src/app/_layouts/employees/employees-details/employees-details.component.html
@@ -1,1 +1,14 @@
 <app-employees-details-header></app-employees-details-header>
+<div class="employees-details-body">
+  <mat-tab-group mat-stretch-tabs="false" mat-align-tabs="center">
+    <mat-tab label="Overview">
+      <div class="mat-tabs-body">
+        <app-employees-details-overview></app-employees-details-overview>
+      </div>
+    </mat-tab>
+    <mat-tab label="Second">
+      <div class="mat-tabs-body"></div>
+    </mat-tab>
+    <mat-tab label="Third"> <div class="mat-tabs-body"></div></mat-tab>
+  </mat-tab-group>
+</div>
