Finished design for employees-details

--- a/owner/owner-client/src/app/_layouts/employees/employees-details/employees-details-overview/employees-details-overview.component.html
+++ b/owner/owner-client/src/app/_layouts/employees/employees-details/employees-details-overview/employees-details-overview.component.html
@@ -31,10 +31,49 @@
     </div>
   </div>
   <div class="info-wrapper">
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti cum
-      debitis rerum, hic minima quo tenetur ut vel omnis? Vero iusto at eligendi
-      corrupti atque, dolore ab perspiciatis quisquam aperiam?
-    </p>
+
+    <mat-divider></mat-divider>
+
+    <div class="info-row">
+      <div>Username</div>
+      <div>zuna21</div>
+    </div>
+
+    <mat-divider></mat-divider>
+
+    <div class="info-row">
+      <div>Full Name</div>
+      <div>Adir Zunic</div>
+    </div>
+
+    <mat-divider></mat-divider>
+
+    <div class="info-row">
+      <div>Restaurant</div>
+      <div>rupa</div>
+    </div>
+
+    <mat-divider></mat-divider>
+
+    <div class="info-row">
+      <div>Email</div>
+      <div>adir.zunic@gmail.com</div>
+    </div>
+
+    <mat-divider></mat-divider>
+
+    <div class="info-row">
+      <div>Phone</div>
+      <div>27482738472</div>
+    </div>
+
+    <mat-divider></mat-divider>
+
+    <div class="info-row">
+      <div>Birth</div>
+      <div>21/12/1992</div>
+    </div>
+
+    <mat-divider></mat-divider>
   </div>
 </div>
