--- a/owner/owner-client/src/app/_layouts/employees/employees-details/employees-details-overview/employees-details-overview.component.css
+++ b/owner/owner-client/src/app/_layouts/employees/employees-details/employees-details-overview/employees-details-overview.component.css
@@ -5,10 +5,15 @@
 
 .description-wrapper {
   flex: 50%;
+  padding: 1rem;
 }
 
 .info-wrapper {
   flex: 50%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 1rem 5rem;
 }
 
 .correct {
@@ -27,7 +32,7 @@
 }
 
 .about-me {
-    color: var(--primary);
+  color: var(--primary);
 }
 
 .permission-row {
@@ -36,10 +41,21 @@
   justify-content: space-between;
 }
 
+.info-row {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.info-row > div:first-child {
+  color: var(--primary);
+}
+
 @media (max-width: 960px) {
   .description-wrapper,
   .info-wrapper {
     flex: 100%;
+    padding: 0;
   }
 
   .permission-wrapper {
