--- a/owner/owner-client/src/app/_layouts/employees/employees-details/employees-details.component.html
+++ b/owner/owner-client/src/app/_layouts/employees/employees-details/employees-details.component.html
@@ -6,9 +6,8 @@
         <app-employees-details-overview></app-employees-details-overview>
       </div>
     </mat-tab>
-    <mat-tab label="Second">
+    <mat-tab label="Documents">
       <div class="mat-tabs-body"></div>
     </mat-tab>
-    <mat-tab label="Third"> <div class="mat-tabs-body"></div></mat-tab>
   </mat-tab-group>
 </div>
