working on employee edit

--- a/owner/owner-client/src/app/_layouts/employees/employees-create/employees-create.component.css
+++ b/owner/owner-client/src/app/_layouts/employees/employees-create/employees-create.component.css
@@ -47,6 +47,10 @@
         padding: 0;
     }
 
+    .other-info {
+        margin-top: 2rem;
+    }
+
     .two-col {
         flex-direction: column;
         gap: 0;
