--- a/owner/owner-client/src/app/_layouts/employees/employees-create/employees-create.component.html
+++ b/owner/owner-client/src/app/_layouts/employees/employees-create/employees-create.component.html
@@ -106,6 +106,7 @@
       <mat-form-field appearance="outline" class="input-wrapper">
         <mat-label>Employee birth</mat-label>
         <input matInput [matDatepicker]="dp3" formControlName="birth" placeholder="12/12/2023" />
+        <mat-hint>MM/DD/YYYY</mat-hint>
         <mat-datepicker-toggle
           matIconSuffix
           [for]="dp3"
