Created menu card

--- a/owner/owner-client/src/styles.css
+++ b/owner/owner-client/src/styles.css
@@ -30,6 +30,16 @@ body {
   height: auto;
 }
 
+.center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.max-width {
+  width: 100%;
+}
+
 .mat-mdc-snack-bar-container {
   &.success-snackbar {
     --mdc-snackbar-container-color: var(--success);
