--- a/owner/owner-client/src/app/_components/menu-card/menu-card.component.css
+++ b/owner/owner-client/src/app/_components/menu-card/menu-card.component.css
@@ -2,4 +2,20 @@
     width: 20rem;
     height: 23rem;
     border: 1px solid var(--primary);
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer-wrapper {
+    justify-content: space-between;
+    padding: 0.5rem;
+    font-size: 14px;
+}
+
+.header-wrapper {
+    color: var(--primary);
+}
+
+.svg {
+    height: 14px;
 }
