--- a/owner/owner-client/src/app/_components/menu-card/menu-card.component.html
+++ b/owner/owner-client/src/app/_components/menu-card/menu-card.component.html
@@ -1,11 +1,11 @@
 <mat-card class="card-wrapper">
     <mat-card-header>
-        <div class="header-wrapper">
+        <div class="header-wrapper center max-width">
             <h2>neko ime za menu</h2>
         </div>
     </mat-card-header>
     <mat-card-content>
-        <div class="content-wrapper">
+        <div class="content-wrapper center">
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus sunt error libero, nam atque sint
                 cupiditate dolorum distinctio eius officiis aperiam quae porro corporis architecto, perferendis nostrum
                 similique dolores sit.
@@ -13,19 +13,17 @@
         </div>
     </mat-card-content>
     <mat-card-actions>
-        <div class="btn-wrapper">
-            <button type="button" mat-raised-button color="accent">
+        <div class="btn-wrapper max-width">
+            <button type="button" class="max-width" mat-raised-button color="accent">
                 View More
             </button>
         </div>
     </mat-card-actions>
-
-    <mat-divider></mat-divider>
     <mat-card-footer>
-        <div class="footer-wrapper">
-            <div class="number-of-items">
+        <div class="footer-wrapper center">
+            <div class="number-of-items center">
                 <div>58</div>
-                <mat-icon svgIcon="restaurant"></mat-icon>
+                <mat-icon svgIcon="restaurant" class="svg"></mat-icon>
             </div>
             <div class="restaurant-name">
                 name of restaurant
