--- a/owner/owner-client/src/app/_components/menu-card/menu-card.component.html
+++ b/owner/owner-client/src/app/_components/menu-card/menu-card.component.html
@@ -1,14 +1,13 @@
-<mat-card class="card-wrapper">
+<mat-card class="card-wrapper" *ngIf="menu">
     <mat-card-header>
         <div class="header-wrapper center max-width">
-            <h2>neko ime za menu</h2>
+            <h2>{{ menu.name }}</h2>
         </div>
     </mat-card-header>
     <mat-card-content>
         <div class="content-wrapper center">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus sunt error libero, nam atque sint
-                cupiditate dolorum distinctio eius officiis aperiam quae porro corporis architecto, perferendis nostrum
-                similique dolores sit.
+            <p>
+                {{ menu.description }}
             </p>
         </div>
     </mat-card-content>
@@ -22,11 +21,11 @@
     <mat-card-footer>
         <div class="footer-wrapper center">
             <div class="number-of-items center">
-                <div>58</div>
+                <div>{{ menu.menuItemNumber }}</div>
                 <mat-icon svgIcon="restaurant" class="svg"></mat-icon>
             </div>
             <div class="restaurant-name">
-                name of restaurant
+                {{ menu.restaurantName }}
             </div>
         </div>
     </mat-card-footer>
