Added header in menu-details

--- a/owner/owner-client/src/app/_layouts/menus/menus-details/menus-details.component.html
+++ b/owner/owner-client/src/app/_layouts/menus/menus-details/menus-details.component.html
@@ -1,1 +1,21 @@
-<p>menus-details works!</p>
+<div
+  class="header-wrapper"
+  style="background-image: url('assets/img/restaurants/rupa.jpg')"
+>
+<div class="background-opacity center">
+    <div class="name">Ime menija duze ime</div>
+    <div class="description">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, quod. Impedit
+      reiciendis similique sequi eaque voluptates eveniet error, sint numquam
+      reprehenderit doloremque dolorum corrupti aperiam, blanditiis tempora beatae
+      explicabo! Eius.
+    </div>
+
+    <div class="btn-wrapper center max-width">
+        <button mat-raised-button color="accent">Edit Menu</button>
+        <button mat-raised-button color="accent">Add Menu Items</button>
+        <button mat-raised-button color="warn">Delete Menu</button>
+    </div>
+</div>
+
+</div>
