--- a/owner/owner-client/src/app/_layouts/menus/menus-details/menus-details.component.css
+++ b/owner/owner-client/src/app/_layouts/menus/menus-details/menus-details.component.css
@@ -31,6 +31,10 @@
     justify-content: space-evenly;
   }
 
+/*   .tab-wrapper {
+    padding: 1rem 0;
+  } */
+
   @media (max-width: 960px) {
     .name {
         font-size: 2rem;
