--- a/owner/owner-client/src/app/_layouts/menus/menus-details/menus-details.component.html
+++ b/owner/owner-client/src/app/_layouts/menus/menus-details/menus-details.component.html
@@ -17,5 +17,19 @@
         <button mat-raised-button color="warn">Delete Menu</button>
     </div>
 </div>
-
 </div>
+
+<mat-tab-group>
+  <mat-tab label="View Menu Items">
+    <div class="tab-wrapper">
+      
+    </div>
+  </mat-tab>
+  <mat-tab label="Create Menu Item"> 
+    <div class="tab-wrapper">
+      <app-menu-item-create></app-menu-item-create>
+    </div>
+  </mat-tab>
+  <mat-tab label="Kalkulacije"> Content 3 </mat-tab>
+</mat-tab-group>
+
